# OB3_Diplom

./: .dockerignore  .env.develop.example  .env.stage.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini
apps/core/: apps.py  cache.py  models.py  ordering.py  pagination.py  views.py
apps/core/management/commands/: __init__.py  create_superuser.py  load_initial_data.py
apps/documents/: admin.py  apps.py  file_types.py  filters.py  models.py  permissions.py  serializers.py  services.py  tasks.py  throttles.py  urls.py  validators.py  views.py
apps/documents/migrations/: 0001_initial.py  0002_initial.py
apps/documents/templates/admin/documents/document/: change_form.html
apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  logging.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  staging.py  test.py
docs/: bpa.md  celery.md  developers.md  docker.md  presentation.md  roadmap.md  testing.md
fixtures/: documents.json  users.json
nginx/: nginx.conf
scripts/: README.md  __init__.py  entrypoint.sh
scripts/unix/: check.sh  fix.sh  test_all.sh  watch.sh
scripts/windows/: check.bat  check.ps1  fix.bat  fix.ps1  test_all.bat  test_all.ps1
static/css/: admin_custom.css
tests/: __init__.py  conftest.py  factories.py  test_admin.py  test_api_documents.py  test_api_root.py  test_cache.py  test_core_views.py  test_file_types.py  test_management_commands.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_tasks.py  test_users.py  test_validators.py
