[tool.poetry]
name = "ob3-document-processing-service"
version = "0.1.0"
description = "Django REST API сервис для автоматической обработки, классификации и валидации загружаемых документов"
authors = ["Rinat Gabitov riga1897@yandex.ru"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.29.0"
pillow = "^12.0.0"
pypdf = "^6.4.0"
python-docx = "^1.1.0"
django-filter = "^25.2"
django-redis = "^6.0.0"
python-decouple-stubs = "^3.8.0.4"
django-filter-stubs = "^0.1.3"
dj-database-url = "^3.0.1"
structlog = "^25.5.0"
reportlab = "^4.4.5"
gunicorn = "^23.0.0"
# filetype: кросс-платформенная библиотека для определения MIME-типов
# Чистый Python, без системных зависимостей, работает на всех платформах
filetype = "^1.2.0"
poetry-core = "^2.2.1"
celery = "^5.5.3"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"
black = "^24.1.1"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
types-redis = "^4.6.0"
pre-commit = "^3.6.0"
pyright = "^1.1.407"
celery-types = "^0.23.0"

